--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@tiptap/react": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.561.0",
     "media-chrome": "^4.17.2",
     "mysql2": "^3.16.2",
