--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "media-chrome": "^4.17.2",
     "mysql2": "^3.16.2",
     "nitro": "npm:nitro-nightly@latest",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
