--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tanstack/router-plugin": "^1.132.0",
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
+    "@zoom/meetingsdk": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
